--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "bcosca/fatfree-core": "^3.7"
+        "bcosca/fatfree-core": "^3.7",
+		"php": "^7.4.0",
+		"ext-apcu": "*"
     }
 }
